--- a/Cursos/HTML/produtos/produtos.css
+++ b/Cursos/HTML/produtos/produtos.css
@@ -27,6 +27,10 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: rgb(212, 0, 0);
+}
+
 .produto {
     width: 940px;
     margin: 0 auto;
@@ -41,6 +45,20 @@ nav a {
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
+}
+
+.produto li:hover {
+    border-color:  rgb(212, 0, 0);
+}
+
+.produto li:active {
+    border-color: rgb(148, 148, 148);
+}
+
+.produto li:hover h2 {
+    font-size: 35px;
 }
 
 .produto h2 {
@@ -56,4 +74,16 @@ nav a {
     font-size: 22px;
     font-weight: bold;
     margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url(img/bg.jpg);
+    padding: 30px 0px;
+}
+
+.copyright {
+    font-size: 13px;
+    color: white;
+    margin: 20px 0 0;
 }
