--- a/Cursos/HTML/style.css
+++ b/Cursos/HTML/style.css
@@ -1,3 +1,34 @@
+.caixa {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.caixa h1 {
+    vertical-align: top;
+}
+
+nav {
+    text-align: center;
+}
+
+nav li{
+    display: inline-block;
+    margin: 0 15px;
+    padding: 10px 0;
+}
+
+nav a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+nav a:hover{
+    color: rgb(212, 0, 0);
+}
+
 #banner {
     width: 100%;
 }
@@ -8,11 +39,16 @@
 }
 
 .titulo-principal {
-    padding-left: 4%;
+    font-size: 35px;
+    font-weight: bold;
+    margin-left: 50px;
 }
 
 .titulo-centralizado {
     text-align: center;
+    font-weight: bold;
+    font-size: 25px;
+    margin-bottom: 20px;
 }
 
 p {
@@ -36,7 +72,7 @@ em strong {
     padding: 20px;
 }
 
-ul {
+.lista-beneficios {
     display: inline-block;
     vertical-align: top;
     width: 20%;
