--- a/Cursos/HTML/style.css
+++ b/Cursos/HTML/style.css
@@ -1,85 +1,112 @@
+header {
+    background: #BBBBBB;
+    padding: 20px;
+}
+
 .caixa {
+    position: relative;
     width: 940px;
     margin: 0 auto;
 }
 
-.caixa h1 {
-    vertical-align: top;
-}
-
 nav {
-    text-align: center;
+    position: absolute;
+    top: 110px;
+    right: 0px;
 }
 
-nav li{
-    display: inline-block;
-    margin: 0 15px;
-    padding: 10px 0;
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
 nav a {
-    text-decoration: none;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
     text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
     color: rgb(212, 0, 0);
 }
 
-#banner {
-    width: 100%;
+.produto {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
 }
 
-.principal {
-    background-color: #CCCCCC;
-    padding: 30px;
-}
-
-.titulo-principal {
-    font-size: 35px;
-    font-weight: bold;
-    margin-left: 50px;
-}
-
-.titulo-centralizado {
-    text-align: center;
-    font-weight: bold;
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-
-p {
-    text-align: center;
-}
-
-#missao {
-    font-size: 20px;
-}
-
-em strong {
-    color: red;
-}
-
-.itens {
-    font-style: italic;
-}
-
-.beneficios {
-    background: #FFFFFF;
-    padding: 20px;
-}
-
-.lista-beneficios {
+.produto li {
     display: inline-block;
+    text-align: center;
+    width: 30%;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
-.imgbeneficios {
-    width: 50%;
+.produto li:hover {
+    border-color:  rgb(212, 0, 0);
+}
 
-} 
+.produto li:active {
+    border-color: rgb(148, 148, 148);
+}
+
+.produto li:hover h2 {
+    font-size: 35px;
+}
+
+.produto h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.produto-descricao {
+    font-size: 18px;
+}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url(produtos/img/bg.jpg);
+    padding: 30px 0px;
+}
+
+.copyright {
+    font-size: 13px;
+    color: white;
+    margin: 20px 0 0;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+form {
+    padding: 40px 0;
+}
+
+form label {
+    display: block;
+    margin: 0 0 5px;
+    font-size: 20px;
+
+}
+
+form input{
+    display: block;
+    margin: 0 0 20px;
+    padding: 5px 10px;
+    width: 50%;
+}
