--- a/Cursos/HTML/style.css
+++ b/Cursos/HTML/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Montserrat", sans-serif;
+}
+
 header {
     background: #BBBBBB;
     padding: 20px;
@@ -39,10 +43,10 @@ nav a:hover {
 
 .produto li {
     display: inline-block;
+    margin: 0 1.5%;
     text-align: center;
     width: 30%;
     vertical-align: top;
-    margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box;
     border: 2px solid black;
@@ -58,11 +62,11 @@ nav a:hover {
 }
 
 .produto li:hover h2 {
-    font-size: 35px;
+    font-size: 32px;
 }
 
 .produto h2 {
-    font-size: 30px;
+    font-size: 29px;
     font-weight: bold;
 }
 
@@ -151,4 +155,47 @@ thead {
 td, th {
     border: 1px solid black;
     padding: 8px 15px;
+}
+
+/*Página home index*/
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    font-size: 2em;
+    text-align: center;
+    margin: 0 0 1em;
+    clear: both;
+}
+
+.principal p {
+    margin:  0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.imgbeneficios {
+    width: 60%;
+}
+
+.mapa {
+    padding: 3em 0;
+}
+
+.mapa p {
+    text-align: center;
+    margin: 0 0 2em;
 }
